_sass/style.scss
.center-title {
  text-align: center;
}

.post-title {
  font-size: 28px;
  line-height: $base-line-height;
}

.pagenav {
  float: left;
  width: 15%;
  padding-top: 75px;
  position: fixed;
  margin-left: $spacing-unit * 3;
}
.pagenav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#subnav {
  margin-left: $spacing-unit / 2;
  list-style-type: none;
}

.linkToTop {
  margin-top: 50px;
}

details {
  margin-bottom: $spacing-unit / 2;
}

.classtile {
  width: 27%;
  height: $base-line-height * 2em;
  border-radius: .5em;

  margin-left: $spacing-unit / 2;
  margin-bottom: $spacing-unit / 2;
  padding: $spacing-unit / 2;

  // to center align text vertically...
  line-height: $base-line-height * 2em;
  // ... and horizontally
  text-align: center;

  background-color: $grey-color-light;
  position: relative;
  float: left;

  cursor: pointer;
}
.classtile:hover {
  background-color: $grey-color-hover;
}

// make the tile a link
.classLink {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;

  z-index: 1;
}

h1, h2:not(.post-list-heading), h3:not(.post-title), h4, h5 {
  //font-family: 'Syne Tactile', cursive;
  font-family: 'Averia Libre', cursive;
  text-transform: uppercase;
}
.tableHeader {
  font-size: 16px;
  text-transform: uppercase;
  font-family: 'Averia Libre', cursive;
  text-align: center;
}

blockquote {
  font-style: normal;
  font-size: 16px;
  color: black;
  background-color: $info-yellow;
  letter-spacing: normal;
  margin-left: 1.5em;
  margin-right: 1.5em;
  padding: 15px;
}
blockquote h5 {
  font-size: 16px;
  text-transform: uppercase;
  font-family: 'Averia Libre', cursive;
  //text-align: center;
}

.formCard p, .formCard h4 {
  margin-bottom: 5px;
}
.formCard {
  margin: 1em 1.5em;
  padding: 15px;
}
.formCard.air {
  background-color: $air-blue;
}
.formCard.earth {
  background-color: $earth-green;
}
.formCard.fire {
  background-color: $fire-red;
}
.formCard.water {
  background-color: $water-blue;
}
.formCard table th, .formCard table tr {
  background-color: transparent;
}

.subtitle { font-size: 20px;
 } 
 
.banner {
  //background-image: url("./path.jpg");
  background-color: $air-blue;
  text-align: center;
  padding-top: 3em;
  padding-bottom: 3em;
  margin-bottom: 1em;
}

.banner h1 {
  font-size: 64px;
}

.banner .button {
  background-color: $brand-color;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: .5em;
}

.new::after {
  content: "new";
  color: white;

  font-size: 12px;
  font-family: $base-font-family;
  text-transform: lowercase;
  vertical-align: middle;
  margin-left: .5em;

  border-radius: .5em;
  padding: 1px 10px;
  text-align: center;
  background-color: $brand-color;
}

.change::after {
  content: "change";
  color: black;

  font-size: 12px;
  font-family: $base-font-family;
  text-transform: lowercase;
  vertical-align: middle;
  margin-left: .5em;

  border-radius: .5em;
  padding: 1px 10px;
  text-align: center;
  background-color: orange;
}

h3:not(.post-title) {
  margin-bottom: .5em;
  border-bottom-width: 1px;
  border-color: $grey-color;
  border-bottom-style: solid;
}
h4 {
  margin-bottom: 0em;
  //font-size: 16px; // default
  font-size: 18px;
}

